create quiz component in progress

--- a/force-app/main/default/classes/EventAppCtrl.cls
+++ b/force-app/main/default/classes/EventAppCtrl.cls
@@ -647,4 +647,28 @@ public without sharing class EventAppCtrl {
         @AuraEnabled
         public String message;
     }
+
+    @AuraEnabled
+    public static List<EventNameWithIdResponse> getEventNamesWithIds(){
+        try {
+            List<Trailblazer_Event__c> eventList = [SELECT Id, Name FROM Trailblazer_Event__c];
+            List<EventNameWithIdResponse> responeList = new List<EventNameWithIdResponse>();
+            for(Trailblazer_Event__c te : eventList) {
+                EventNameWithIdResponse response = new EventNameWithIdResponse();
+                response.label = te.Name;
+                response.value = te.Id;
+                responeList.add(response);
+            }
+            return responeList;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    public class EventNameWithIdResponse {
+        @AuraEnabled
+        public String label;
+        @AuraEnabled
+        public String value;
+    }
 }
